package io.freddief.mizuho.priceservice.domain.price;

public enum CurrencyCode {

    GBP

}
