package io.freddief.mizuho.priceservice.dto.instrument;

public enum InstrumentType {

    STOCK,
    BOND,
    DERIVATIVE

}
